--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ server.port=7080
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # DB URL
-spring.datasource.url=jdbc:mysql://localhost:3306/world?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul 
+spring.datasource.url=jdbc:mysql://localhost:3306/world?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 
 # DB username
 spring.datasource.username=root
 
 # DB password
-spring.datasource.password=abcdefg
+spring.datasource.password=kms1912624
 
 # ??? SQL ?? ??
 spring.jpa.show-sql=true
@@ -24,3 +24,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #mybatis
 mybatis.type-aliases-package=kms.project.vo
+mybatis.mapper-locations=classpath:mapper/**/*.xml
