--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #mybatis
 mybatis.type-aliases-package=kms.project.vo
 mybatis.mapper-locations=classpath:mapper/**/*.xml
+
+
+#messages
+spring.messages.basename=messages,errors
