회원가입 최종본 완료 commit

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -2,3 +2,6 @@ typeMismatch.java.lang.Integer= \uC22B\uC790\uB9CC \uC785\uB825 \uAC00\uB2A5\uD5
 typeMismatch.java.lang.String=\uBB38\uC790\uB9CC \uC785\uB825 \uAC00\uB2A5\uD569\uB2C8\uB2E4
 typeMismatch=\uD0C0\uC785\uC624\uB958\uC785\uB2C8\uB2E4
 empty= \uD544\uC218\uC785\uB825\uAC12\uC785\uB2C8\uB2E4
+user.user_pw2.pwMismatch=\uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4
+pwMismatch=\uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4
+misMatch=\uC62C\uBC14\uB978 \uD615\uC2DD\uC774 \uC544\uB2D9\uB2C8\uB2E4
