마이페이지 계정변경 페이지 문의사항 페이지 구현 commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #mybatis
-mybatis.type-aliases-package=kms.project.vo
+mybatis.type-aliases-package=kms.project.vo,kms.project.dto
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 
