--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'net.nurigo:javaSDK:2.2'
-
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 }
 
