--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -5,3 +5,5 @@ empty= \uD544\uC218\uC785\uB825\uAC12\uC785\uB2C8\uB2E4
 user.user_pw2.pwMismatch=\uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4
 pwMismatch=\uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4
 misMatch=\uC62C\uBC14\uB978 \uD615\uC2DD\uC774 \uC544\uB2D9\uB2C8\uB2E4
+idPwMismatch=\uC544\uC774\uB514 \uB610\uB294 \uBE44\uBC00\uBC88\uD638\uAC00 \uC77C\uCE58\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4
+range=\uC0C1\uD488\uAC00\uACA9\uC758 \uBC94\uC704\uB294 0\uC6D0 ~ 99999\uC6D0 \uC785\uB2C8\uB2E4
