--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 #messages
 spring.messages.basename=messages,errors
+
+spring.main.allow-circular-references=true
